fix for z-index or scroll progress container

--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -44,6 +44,7 @@ footer p {
     left: 0;
     position: fixed;
     right: 0;
+    z-index: 1;
 
 /* The progress container (grey background) */
 .progress-container {
